Style the main container

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,3 +24,14 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+main {
+  margin-top: 140px;
+}
+
+main.container {
+  width: 450px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+}
