--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,13 +26,12 @@ body {
  */
 
 main {
-  margin-top: 140px;
+  padding-top: 140px;
 }
 
 main.container {
   min-height: 100vh;
   width: 450px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   background-color: white;
 }
