--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -4,6 +4,7 @@
   background-color: #F3F3F3;
   margin: 0em 2em 1em 2em;
   padding: 10px;
+  display: block;
 }
 
 .new-tweet > h2 {
@@ -24,7 +25,7 @@
   float: right;
 }
 
-.over-limit.counter {
+.over-limit {
   color: red;
 }
 
