Add media query on main layout css

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -36,3 +36,9 @@ main.container {
   background-color: white;
   padding-bottom: 100px;
 }
+
+@media (max-width: 450px) {
+    main.container {
+      width: 100%;
+    }
+}
